<resources>
    <string name="app_name">Fast Question</string>
    <string name="appTitle">Fast Question</string>
    <string name="questionLoading">Загружается вопрос...</string>
    <string name="answerButtonText">Ответить</string>
    <string name="answerEditTextHint">Ваш ответ...</string>
    <string name="counterTextView" formatted="false">Осталось вопросов: %1$d</string>
    <string name="askQuestionTextView">Задайте вопрос...</string>
    <string name="questionEditTextHint">Ваш вопрос...</string>
    <string name="questionButtonText">Задать вопрос</string>
    <string name="answerSizeValidationMessageText" formatted="false">
        Ответ не может содержать менее %1$d и более %2$d символов!
    </string>
    <string name="questionSizeValidationMessageText" formatted="false">
        Вопрос не может содержать менее %1$d и более %2$d символов!
    </string>
    <string name="myQuestionsText">Мои вопросы</string>
    <string name="swipeInfoLabel">Листни, что бы продолжить</string>
    <string name="pageNumberParamName">pageNumber</string>
    <string name="questionNumberInPageParamName">questionNumberInPage</string>
    <string name="idParamName">id</string>
    <string name="textParamName">text</string>
    <string name="filePath1ParamName">filePath1</string>
    <string name="filePath2ParamName">filePath2</string>
    <string name="emptyJsonObject">{}</string>
    <string name="emptyJsonArray">[]</string>
    <string name="pageIsNotExistsErrorMessage">
        Page with number = {0} is not exists! File path = {1}
    </string>
    <string name="myQuestionsPath">
        /myQuestions/
    </string>
    <string name="myQuestionPageName">
        myQuestionsPage{0}.json
    </string>
    <string name="myQuestionDataConfig">
        config.json
    </string>
    <string name="failureToLoadQuestionErrorMessage">
        Ошибка загрузки вопроса
    </string>
    <string name="failureToSendAnswerErrorMessage">
        Ошибка отправки ответа
    </string>
    <string name="errorSendAskMessage">
        Ошибка отправки вопроса
    </string>
    <string name="answerPrefix">- </string>
    <string name="emptyAnswersDataMessage">Ответов пока что нет... Жди...</string>
    <string name="failureToLoadAnswers">Произошла ошибка загрузки ответов на этот вопрос</string>
    <string name="hiddenMulidot">...</string>
    <string name="pages">Страницы: </string>
    <string name="voteError">При голосовании произошла ошибка</string>
    <string name="questionTypeParam">questionType</string>
</resources>
