<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:filterTouchesWhenObscured="false"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/myQuestionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="false"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/appTitle"
            app:srcCompat="@drawable/fq_logo" />

        <LinearLayout
            android:id="@+id/answerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif"
                android:text="@string/questionLoading"
                android:textAlignment="center"
                android:textColor="@color/labelTextColor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/answerTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="serif"
                android:gravity="top|left"
                android:hint="@string/answerEditTextHint"
                android:inputType="textMultiLine|textPersonName"
                android:lines="@integer/minMulilineTextSize"
                android:maxLines="@integer/maxMulilineTextSize"
                android:minLines="@integer/minMulilineTextSize"
                android:scrollbars="vertical"
                android:textColor="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/counterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="serif"
                android:text="@string/counterTextView"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/questionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/askQuestionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/askQuestionTextView"
                android:textAlignment="center"
                android:textColor="@color/labelTextColor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/questionTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/questionEditTextHint"
                android:inputType="textMultiLine|textPersonName"
                android:lines="@integer/minMulilineTextSize"
                android:maxLines="@integer/maxMulilineTextSize"
                android:minLines="@integer/minMulilineTextSize"
                android:scrollbars="vertical"
                android:textColorHint="@color/labelTextColor"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleQuestionAnswersPopup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/questionTitleSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor"
                android:textSize="24sp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/updateSinglePageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_popup_sync" />

            <LinearLayout
                android:id="@+id/singleAnswersList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/swipeInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swipeInfoLabel"
            android:textAlignment="center"
            android:textColor="@color/labelTextColor" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>